# pandoc_reader

./: .gitignore  README.md  embed_metadata_filter.py  pandoc_reader.py  pyproject.toml
pelican/plugins/pandoc_reader/: config.py  pandoc_reader.py
pelican/plugins/pandoc_reader/pandoc/defaults/: pelican.yaml
pelican/plugins/pandoc_reader/pandoc/filters/: serverside-katex.lua
pelican/plugins/pandoc_reader/pandoc/templates/: pelican.html5
