[tool.poetry]
name = "pelican-pandoc-reader"
version = "0.5.0"
description = "Use Pandoc as a Markdown engine for Pelican."
authors = [
    "Hinrich B. Winther <liob@users.noreply.github.com>",
    "Zack Weinberg <zackw@panix.com>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/zackw/pandoc_reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/zackw/pandoc_reader/issues"

[tool.poetry.scripts]
pelican-pandoc-reader-config = "pelican.plugins.pandoc_reader.config:run"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5"
# merged into the stdlib in 3.7 (*not* 3.9, contra the documentation)
importlib_resources = { version = "^3.0", python = "~3.6" }

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8"
flake8-black = "^0.1.0"
invoke = "^1.4"
isort = "^5.4"

[tool.autopub]
project-name = "Pandoc reader plugin for Pelican"
git-username = "botpub"
git-email = "botpub@autopub.rocks"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
